--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "sinon": "^9.0.2",
     "styled-components": "^5.1.1"
   },
   "scripts": {
